Fix preheader styling/Add functionality to have left aligned prefooter images

--- a/curling-main/sass/base/_base.scss
+++ b/curling-main/sass/base/_base.scss
@@ -12,7 +12,7 @@ body {
 }
 
 body {
-  overflow: visible;
+  overflow: hidden;
 }
 
 *,
