--- a/curling-main/sass/layout/_header.scss
+++ b/curling-main/sass/layout/_header.scss
@@ -7,6 +7,10 @@
     margin-right: auto;
   }
 
+  .nav-menu-top-container {
+    background-color: $white;
+  }
+
   .nav-menu-top-right-mobile {
     background-color: $red;
   }
